packages/app-components/src/Popover.module.css
/**
 *  Portal
 *  | Popover - .cPopover
 *  | | Arrow - .eArrow
 *  | | Close - .eClose
 */
.cPopover {
  border-radius: 4px;
  padding: 20px;
  width: 300px;
  background-color: var(--panel-bg);
  box-shadow: var(--popover-shadow);
  will-change: transform, opacity;
  z-index: 100;
  color: var(--panel-fg);
  font-size: 12px;
  margin-right: 0.2rem;

  transform-origin: var(--transform-origin);
  transition: transform cubic-bezier(0.16, 1, 0.3, 1) 300ms,
  opacity cubic-bezier(0.16, 1, 0.3, 1) 300ms;

  height: var(--popup-height, auto);

  .eArrow {
    background: transparent;

    border-left: 5px solid transparent;
    border-right: 5px solid transparent;

    border-bottom: 5px solid var(--panel-bg);

    &[data-side='bottom'] {
      top: -5px;
    }
  }

  .eClose {
    font-family: inherit;
    background: transparent;
    height: 25px;
    width: 25px;
    color: var(--accent-fg);
    position: absolute;
    top: 5px;
    right: 5px;
    z-index: 200;
    border: none;
  }

  &[data-starting-style],
  &[data-ending-style] {
    opacity: 0;
    transform: scale(0.9);
  }

  & h2:first-of-type {
    margin-top: 0;
    margin-bottom: 0.25rem;
    font-size: 0.8rem;
    text-align: left;
  }
}

